# TTKOCR

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  README_cn.md  README_tc.md  TTKBuild.pri  TTKOCR.pri  TTKOCR.pro  TTKVersion.pri  ocrglobal.h  ocrprivate.h  ocrversion.h  ttkglobal.h  ttkprivate.h  ttkversion.h
TTKCommon/: TTKCommon.pri  ocrglobal.h  ttkdesktopwrapper.h  ttkglobal.h  ttkglobaldefine.h  ttkobject.h  ttkprivate.h  ttkqtwrapper.h  ttksingleton.h  ttkversion.h
TTKConfig/: CMakeLists.txt  TTKConfig.pro  ocrconfigdefine.h  ocrconfigmodule.cpp  ocrconfigmodule.h  ocrconfigobject.cpp  ocrconfigobject.h
TTKLanguage/: CMakeLists.txt  cn.ts
TTKModule/: CMakeLists.txt  TTKCore.rc  TTKModule.pri  TTKModule.pro  ocrapplication.cpp  ocrapplication.h  ocrapplicationmodule.cpp  ocrapplicationmodule.h  ocrapplicationobject.cpp  ocrapplicationobject.h
TTKQrc/: OCRApp.qrc  TTKOCR.qrc  TTKQrc.pro  TTKQrc.rc
TTKRun/: CMakeLists.txt  TTKRun.pro  ocrrunglobaldefine.h
TTKScript/: make_cert.bat
TTKService/: CMakeLists.txt  TTKService.pro  TTKService.rc  ocrservicemain.cpp
TTKTest/: TTKTest.pro  ocrapplicationmain.cpp  ocrautotest.h  tst_codelines.cpp  tst_codelines.h
TTKThirdParty/: CMakeLists.txt  TTKExtrasDefine.pri  TTKThirdParty.pri  TTKThirdParty.pro  ocrextrasglobaldefine.h
TTKThirdParty/TTKPdf/: CMakeLists.txt  TTKPdf.pro  TTKPdf.rc  document.cpp  document.h
TTKThirdParty/TTKPdf/include/: mupdf-document.h  mupdf-link.h  mupdf-outline.h  mupdf-page.h  mupdf-qt.h  mupdf-textbox.h
TTKThirdParty/TTKPdf/mupdf/: pdf.h
TTKThirdParty/TTKPdf/src/: mupdf-document.cpp  mupdf-link.cpp  mupdf-outline.cpp  mupdf-page.cpp  mupdf-textbox.cpp
TTKThirdParty/TTKPdf/src/private/: mupdf-document_p.h  mupdf-link_p.h  mupdf-outline_p.h  mupdf-page_p.h  mupdf-textbox_p.h
TTKUi/: CMakeLists.txt  OCRApp.qrc  TTKModule.qrc  TTKOCR.qrc  TTKUi.pro
TTKUtils/: linux_time.sh  make_cert.bat  (+2 more)
(+156 files in other folders)
